3.4
	+ Give support to multiple addresses for a domain in Transparent
	  Proxy Exemptions
	+ Save modules configurations after initialSetup
	+ Added all subdomains in cache exemptions
	+ Deny cache explicitly from cache exemption domains
	+ Give support to optional ABORTED flag in denied requests when
	  the HTTP client aborts the request
	+ Adapt configuration for squid 3.3.8
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Forced 644 permission on Dansguardian files to avoid zombie processes
	+ Remove canonical_dn call for compatibility with MS LDAP servers in
	  external AD mode
	+ Synchronise AD groups every 30 min if using external AD and any
	  filter profile includes an AD group
	+ Manage errors when AD failed on fulfill our requests in external
	  AD mode
	+ Give support to groups with more than 1500 members and more than
	  1000 groups in external AD mode
	+ Fixed regression in authenticationMode method
	+ Added validation of the domains added to the transparent proxy
	  exceptions
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Delete migration code from old versions
	+ Update strings to new offering
	+ Make external AD auth available for offer 2013
	+ Added http_allow to internal squid stub so proxy event does not need
	  an explicit rule
	+ Added missing EBox::Exceptions uses
	+ Fix group based filter access rules in external AD mode, retrieving
	  members of nested groups
	+ Correctly escape DNs and search filters or external ACL helper script
	+ Explicitly specify to listen on all IPv4 interfaces
	+ Add new config key auth_ad_negative_acl_ttl to configure negative ACL
	  cache time in external AD mode
	+ Transparent proxy redirection for openvpn servers' clients
	+ Moved EBox::SquidFirewall to EBox::Squid::Firewall
	+ Avoid error in access rules model when using external AD and
	  module has not been configured
	+ Improve squid group membership helper script